<resources>
    <string name="app_name">fitness</string>
    <string name="homepage">Homepage</string>
    <string name="title_activity_view_history">Detail-View History</string>
    <string name="features">Features</string>
    <string name="for_more_details">For More Details :-</string>
    <string name="ph_no">Ph No. 7508972605</string>
    <string name="detail_about_app">This App contains Tracking sessions, your perfect diet plan,Exercises !</string>
    <string name="explain_about_app">3 Tabs contained in this app</string>
    <string name="tv_tracking">Tracking</string>
    <string name="tv_diet_plan">Diet Plan</string>
    <string name="TV_exercise">Exercise</string>
    <string name="activities">Activities</string>
    <string name="google_login">Google Login</string>
    <string name="excerise">Excerise</string>
    <string name="music_player">Music Player</string>
    <string name="history">History</string>
    <string name="google_login_page">Google Login Page</string>
    <string name="track_running">Track Your Running Location</string>
    <string name="tv_count_timing">Count Timing</string>
    <string name="tv_calculate_callories">Calculate Callories</string>
    <string name="tv_find_location">Find Current Location</string>
    <string name="view_history">View History</string>
    <string name="tv_music_player">Music Player</string>
    <string name="start_now">Start Now</string>
    <string name="music_list">Music List</string>
    <string name="view_diet_plan_of_whole_week">View Diet Plan Of Whole Week</string>
    <string name="day_7">day 7</string>
    <string name="day_6">day 6</string>
    <string name="day_5">day 5</string>
    <string name="day_4">day 4</string>
    <string name="day_3">day 3</string>
    <string name="day_2">day 2</string>
    <string name="day_1">day 1</string>
    <string name="view">View</string>
    <string name="song_title">Song-Title</string>
    <string name="stop">Stop</string>
    <string name="idea_mobile_no">7508972605</string>
    <string name="jio_mobile_no">7986180139</string>
    <string name="email">Email:</string>
    <string name="user_email">user.surajdpatel@gmail.com</string>
    <string name="ok">OK</string>
    <string name="fitness_website">www.fitnessapp.com</string>
    <string name="visit">Visit:</string>
    <string name="gurdaspur">Gurdaspur</string>
    <string name="gndu">Guru Nanak Dev University</string>
    <string name="fitnessapp">FitnessApp</string>
    <string name="project">Project</string>
    <string name="fitness_app">Fitness App</string>
    <string name="counter">Counter</string>
    <string name="enter_session_name">Enter Session Name</string>
    <string name="type_here">Type here....</string>
    <string name="cancel">Cancel</string>
    <string name="calories">Calories</string>
    <string name="kilometers">Kilometers</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="recent_activity">Recent Activities</string>
    <string name="view_detail">View Details</string>
    <string name="session_name">Session Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date">Date</string>
    <string name="username">UserName</string>
    <string name="total_time">Total Time</string>
    <string name="kilometer">Kilo Meter</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="delete_history">Delete History</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="description">Description</string>
    <string name="rev">Rev</string>
    <string name="play">PLay</string>
    <string name="fwd">Fwd</string>
</resources>
