<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="#03a9fb"
            app:title="About App"
            app:titleTextColor="#ffffff "
            app:subtitleTextColor="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="#050505"
            android:textSize="20sp"
            android:text="@string/detail_about_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:textSize="18sp"
            android:text="@string/explain_about_app"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="40dp"
            android:textColor="#050505"
            android:text="@string/tv_tracking" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:text="@string/tv_diet_plan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:text="@string/TV_exercise" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:text="@string/activities"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_login"
                    android:id="@+id/btn_google_login"
                    android:textColor="#ffffff"
                    android:background="#03a9fb"
                    android:layout_marginStart="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_tracking"
                    android:id="@+id/btn_start_tracking"
                    android:background="#03a9fb"
                    android:textColor="#ffffff"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/excerise"
                    android:id="@+id/btn_exercise"
                    android:background="#03a9fb"
                    android:textColor="#ffffff"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music_player"
                    android:id="@+id/btn_music_player"
                    android:textColor="#ffffff"
                    android:background="#03a9fb"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:id="@+id/btn_history"
                    android:textColor="#ffffff"
                    android:background="#03a9fb"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:text="@string/features"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/google_login_page" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/track_running" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/tv_count_timing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/tv_calculate_callories" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/tv_find_location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:layout_marginStart="40dp"
            android:textSize="15sp"
            android:text="@string/view_history" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#050505"
            android:textSize="15sp"
            android:layout_marginStart="40dp"
            android:text="@string/tv_music_player" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="#050505"
                android:id="@+id/tv2"
                android:text="@string/for_more_details"
                android:textSize="18sp"
                android:layout_weight="4"
                android:gravity="end" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="#03a9fb"
                android:layout_marginStart="10dp"
                android:id="@+id/tv_phoneno"
                android:text="@string/ph_no"
                android:textSize="20sp"
                android:layout_weight="6"
                android:gravity="start" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>