<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fffefe"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fitnessapp"
                android:textColor="#03a9fb"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/project"
                android:textColor="#03a9fb"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gndu"
                android:textColor="#5e5e55"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gurdaspur"
                android:textColor="#5e5e55"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_phone_iphone_black_24dp"
                    android:layout_weight="2"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:gravity="start"
                    android:layout_marginTop="8dp"
                    android:text="@string/idea_mobile_no"
                    android:textColor="#03a9fb"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="#2bcab2"
                android:weightSum="10">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_phone_iphone_black_24dp"
                    android:layout_weight="2"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/tv_phone1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="start"
                    android:text="@string/jio_mobile_no"
                    android:layout_marginStart="10dp"
                    android:textColor="#03a9fb"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/email"
                    android:textColor="#5e5e55"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="start"
                    android:text="@string/user_email"
                    android:textColor="#03a9fb"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="#fffffe"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/visit"
                    android:textColor="#5e5e55"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/visit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="start"
                    android:text="@string/fitness_website"
                    android:textColor="#03a9fb"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnok"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="#03a9fb"
                android:text="@string/ok"
                android:textColor="#fffffe"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView></RelativeLayout>