<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PushUpsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:src="@drawable/push_ups"
        android:id="@+id/imgeview"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/counter"
        android:textColor="#d71c1c"
        android:textSize="32sp"
        android:layout_marginBottom="25dp"
        android:id="@+id/tv_pushups_counter"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btn_start_pushups"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape_color" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/btn_stop_pushups"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape_color_red" />
</LinearLayout>
